--- a/app/src/main/res/navigation/game_navigation.xml
+++ b/app/src/main/res/navigation/game_navigation.xml
@@ -20,12 +20,20 @@
         android:name="com.ubaya160420092.adv160420092week2.GameFragment"
         android:label="Game Screen"
         tools:layout="@layout/fragment_game" >
-        <action
-            android:id="@+id/actionMainFragment"
-            app:destination="@id/mainFragment"
-            app:exitAnim="@android:anim/fade_out" />
         <argument
             android:name="player_name"
             app:argType="string" />
+        <action
+            android:id="@+id/actionResultFragment"
+            app:destination="@id/resultFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/resultFragment"
+        android:name="com.ubaya160420092.adv160420092week2.ResultFragment"
+        android:label="Result Screen"
+        tools:layout="@layout/fragment_result">
+        <action
+            android:id="@+id/actionMainFragment"
+            app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
