--- a/app/src/main/res/navigation/game_navigation.xml
+++ b/app/src/main/res/navigation/game_navigation.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/game_navigation"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/itemHome">
 
     <fragment
-        android:id="@+id/mainFragment"
+        android:id="@+id/itemHome"
         android:name="com.ubaya160420092.adv160420092week2.MainFragment"
         android:label="Main Screen"
         tools:layout="@layout/fragment_main">
@@ -25,7 +25,8 @@
             app:argType="string" />
         <action
             android:id="@+id/actionResultFragment"
-            app:destination="@id/resultFragment" />
+            app:destination="@id/resultFragment"
+            app:popUpTo="@id/itemHome" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
@@ -34,9 +35,20 @@
         tools:layout="@layout/fragment_result">
         <action
             android:id="@+id/actionMainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/itemHome"
+            app:popUpTo="@id/itemHome" />
         <argument
             android:name="score"
             app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/itemHistory"
+        android:name="com.ubaya160420092.adv160420092week2.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/itemProfile"
+        android:name="com.ubaya160420092.adv160420092week2.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
